--- a/Machine_learning/23.10.11/task1.ipynb
+++ b/Machine_learning/23.10.11/task1.ipynb
@@ -27,6 +27,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "参考官网\n",
+    "\n",
+    "[sklearn.linear_model.LogisticRegression](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html)\n",
+    "\n",
+    "请用中文简述sklearn.linear_model.LogisticRegression以下参数的作用：\n",
+    "\n",
+    "1. penalty: {‘l1’, ‘l2’, ‘elasticnet’, ‘none’}, default=’l2’\n",
+    "\n",
+    "    惩罚项，指定正则化的类型。可供选择的选项有’l1’、’l2’、’elasticnet’和’none’，默认值为’l2’。\n",
+    "\n",
+    "2. dual: bool, default=False\n",
+    "\n",
+    "    对偶优化，表示是否使用对偶优化算法。对偶优化适用于样本数量大于特征数量的情况。默认值为False。\n",
+    "\n",
+    "3. C: float, default=1.0\n",
+    "\n",
+    "    正则化强度，控制正则化的强度，较小的值表示更强的正则化。默认值为1.0。\n",
+    "\n",
+    "4. fit_intercept: bool, default=True\n",
+    "\n",
+    "    拟合截距，表示是否计算模型的截距。如果设置为True，则会计算截距。默认值为True。\n",
+    "\n",
+    "5. solver: {‘newton-cg’, ‘lbfgs’, ‘liblinear’, ‘sag’, ‘saga’}, default=’lbfgs’\n",
+    "\n",
+    "    求解器，用于优化问题的算法。可以选择的选项包括'newton-cg'、‘lbfgs’、‘liblinear’、‘sag’和‘saga’。默认值为'lbfgs'。\n",
+    "\n",
+    "6. max_iter: int, default=100\n",
+    "\n",
+    "    最大迭代次数，指定模型的最大迭代次数。默认值为100。\n",
+    "\n",
+    "7. n_jobs: int, default=None\n",
+    "\n",
+    "    并行运算，指定用于拟合和预测的并行作业数量。默认值为None，表示不并行运算。\n",
+    "\n",
+    "8. l1_ratio: float, default=None\n",
+    "\n",
+    "    L1正则化比例，仅在penalty为'elasticnet'时生效，控制L1正则化在总正则化中的比例。默认值为None。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "C(正则化强度)为0.1时："
    ]
   },
