--- a/Machine_learning/23.11.8/task2.ipynb
+++ b/Machine_learning/23.11.8/task2.ipynb
@@ -162,8 +162,14 @@
      "output_type": "stream",
      "text": [
       "Building prefix dict from the default dictionary ...\n",
-      "Loading model from cache C:\\Users\\LLeavee\\AppData\\Local\\Temp\\jieba.cache\n",
-      "Loading model cost 0.795 seconds.\n",
+      "Loading model from cache C:\\Users\\LLeavee\\AppData\\Local\\Temp\\jieba.cache\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading model cost 1.150 seconds.\n",
       "Prefix dict has been built successfully.\n"
      ]
     }
@@ -245,33 +251,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.56      0.23      0.33      1250\n",
+      "           1       0.52      0.82      0.63      1250\n",
+      "\n",
+      "    accuracy                           0.53      2500\n",
+      "   macro avg       0.54      0.53      0.48      2500\n",
+      "weighted avg       0.54      0.53      0.48      2500\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      0.00      0.01      1250\n",
+      "           1       0.50      1.00      0.67      1250\n",
+      "\n",
+      "    accuracy                           0.50      2500\n",
+      "   macro avg       0.75      0.50      0.34      2500\n",
+      "weighted avg       0.75      0.50      0.34      2500\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.56      0.23      0.32      1250\n",
+      "           1       0.52      0.82      0.63      1250\n",
+      "\n",
+      "    accuracy                           0.52      2500\n",
+      "   macro avg       0.54      0.52      0.48      2500\n",
+      "weighted avg       0.54      0.52      0.48      2500\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# # 利用逻辑回归来训练模型\n",
-    "# params_c = np.logspace(-5, 2, 15)\n",
-    "# model = GridSearchCV(\n",
-    "#     estimator=LogisticRegression(penalty=\"l2\"),\n",
-    "#     param_grid={\"C\": params_c},\n",
-    "#     scoring=\"f1\",\n",
-    "#     cv=10,\n",
-    "# )\n",
-    "# model.fit(X_train, y_train)\n",
-    "# predictions = model.predict(X_test)\n",
-    "# print(classification_report(y_test, predictions))\n",
+    "# 利用逻辑回归来训练模型\n",
+    "params_c = np.logspace(-5, 2, 15)\n",
+    "model = GridSearchCV(\n",
+    "    estimator=LogisticRegression(penalty=\"l2\"),\n",
+    "    param_grid={\"C\": params_c},\n",
+    "    scoring=\"f1\",\n",
+    "    cv=10,\n",
+    ")\n",
+    "model.fit(X_train, y_train)\n",
+    "predictions = model.predict(X_test)\n",
+    "print(classification_report(y_test, predictions))\n",
     "\n",
-    "# # 利用朴素贝叶斯来训练模型\n",
-    "# params_alpha = [1]\n",
-    "# model = GridSearchCV(\n",
-    "#     estimator=MultinomialNB(fit_prior=True),\n",
-    "#     param_grid={\"alpha\": params_alpha},\n",
-    "#     scoring=\"f1\",\n",
-    "#     cv=10,\n",
-    "# )\n",
-    "# model.fit(X_train, y_train)\n",
-    "# predictions = model.predict(X_test)\n",
-    "# print(classification_report(y_test, predictions))\n",
+    "# 利用朴素贝叶斯来训练模型\n",
+    "params_alpha = [1]\n",
+    "model = GridSearchCV(\n",
+    "    estimator=MultinomialNB(fit_prior=True),\n",
+    "    param_grid={\"alpha\": params_alpha},\n",
+    "    scoring=\"f1\",\n",
+    "    cv=10,\n",
+    ")\n",
+    "model.fit(X_train, y_train)\n",
+    "predictions = model.predict(X_test)\n",
+    "print(classification_report(y_test, predictions))\n",
     "\n",
     "# 利用SVM来训练模型\n",
     "params = [\n",
